# scriptify

./: .ai-instructions.md  .rules  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  TODO.md  Todo.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
docs/: DEVELOPMENT.md
examples/: ansi-true-color.rs  ansi.rs  cmd.rs  echo.rs  env.rs  fs.rs  pipe_modes.rs  pipeline_performance.rs  tracing.rs
examples/01_basics/: hello_world.rs  simple_commands.rs  simple_fs.rs  simple_pipes.rs
examples/02_intermediate/: complex_pipes.rs  environment.rs  error_handling.rs  mixed_pipe_modes.rs  pipe_modes.rs  reader_writer_demo.rs
examples/03_advanced/: command_quoting.rs  complex_pipes.rs  control_char_demo.rs  streaming_io.rs
src/: ansi.rs  cmd.rs  color.rs  echo.rs  env.rs  fs.rs  lib.rs  output.rs  style.rs
src/ansi/: control.rs  mod.rs  style.rs
src/cmd/: child.rs  command.rs  err.rs  error.rs  handle.rs  io.rs  mod.rs  pipe.rs  pipeline.rs  spawn.rs  status.rs  test.rs  tests.rs  types.rs
src/cmd/io/: mod.rs  reader.rs  writer.rs
src/cmd/tests/: concurrency.rs  environment.rs  error_handling.rs  input_output.rs  mod.rs  no_echo.rs  quoting.rs  security.rs
tests/: integration_tests.rs
xtask/: Cargo.toml
xtask/src/: main.rs  readme.rs
