[workspace]
members = [".", "xtask"]

[package]
name = "scriptify"
version = "0.1.0"
edition = "2024"
rust-version = "1.87.0"
authors = ["Mozk Taberenai <mozktaberenai@gmail.com>"]
license = "MIT"
description = "Scriptify your Rust - easy command execution and file operations"
repository = "https://github.com/MozkTaberenai/scriptify"
homepage = "https://github.com/MozkTaberenai/scriptify"
categories = ["command-line-interface"]

[dependencies]
anstyle = "1.0.7"

[dev-dependencies]
ansi-to-html = "0.2.1"
cargo-readme = "3.3.1"

[[example]]
name = "cmd"
[[example]]
name = "fs"
[[example]]
name = "pipeline_performance"


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.readme]
readme-path = "README.md"
