[workspace]
members = [".", "xtask"]

[package]
name = "scriptify"
version = "0.1.0"
edition = "2024"
rust-version = "1.87.0"
authors = ["Mozk Taberenai <mozktaberenai@gmail.com>"]
license = "MIT"
description = "Scriptify your Rust - easy command execution and file operations"
repository = "https://github.com/MozkTaberenai/scriptify"
homepage = "https://github.com/MozkTaberenai/scriptify"
categories = ["command-line-interface"]

[dependencies]
anstyle = "1.0.7"

[dev-dependencies]
ansi-to-html = "0.2.1"
cargo-readme = "3.3.1"


# 01_basics - Beginner examples
[[example]]
name = "hello_world"
path = "examples/01_basics/hello_world.rs"
[[example]]
name = "simple_commands"
path = "examples/01_basics/simple_commands.rs"
[[example]]
name = "simple_pipes"
path = "examples/01_basics/simple_pipes.rs"
[[example]]
name = "simple_fs"
path = "examples/01_basics/simple_fs.rs"

# 02_intermediate - Intermediate examples
[[example]]
name = "error_handling"
path = "examples/02_intermediate/error_handling.rs"
[[example]]
name = "environment"
path = "examples/02_intermediate/environment.rs"
[[example]]
name = "complex_pipes"
path = "examples/02_intermediate/complex_pipes.rs"
[[example]]
name = "pipe_modes"
path = "examples/02_intermediate/pipe_modes.rs"




[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.readme]
readme-path = "README.md"
